@@ -1,5 +1,9 @@
 5 September 2007: Wouter
 	- cname, name error validator tests.
+	- logging of qtype ANY works.
+	- ANY type answers get RRSIG in answer section of replies (but not
+	  in other sections, unless DO bit is on).
+	- testbound can replay a TCP query (set MATCH TCP in the QUERY).
 
 4 September 2007: Wouter
 	- fixup of Leakage warning when serviced queries processed multiple
